--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,32 +1,28 @@
 #sbmod-grandarm
 #changelog
-+addition
-*change
--removal
++ addition
+* change
+- removal
 
----
-###vur
+
+vur
 + craftables
 + more treasurepools
 * mace knockback and swing timing
 * baton graphic rework
 
----
-###v0.4 2017-01-02
+v0.4 2017-01-02
 + 1hmacevariant
 * rectangularbooks
 
----
-###v0.3 2017-01-02
+v0.3 2017-01-02
 * npclubfix
 - npcweaponalt-abilities
 
----
-###v0.2a 2017-01-02
+v0.2a 2017-01-02
 + QSEXT inclusion
 
----
-###v0.2 2017-01-02
+v0.2 2017-01-02
 + branding
 + steamID
 * abilitytweaks
