--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@ vur
 + more treasurepools
 * mace knockback and swing timing
 * baton graphic rework
+* cane graphic rework
 
 v0.4 2017-01-24
 + 1h mace variant
