--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,8 +9,10 @@ vur
 + craftables
 + more treasurepools
 * mace knockback and swing timing
-* baton graphic rework
-* cane graphic rework
+* baton rework
+* cane rework
+* club rework
+* greataxe rework
 
 v0.4 2017-01-24
 + 1h mace variant
