--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,10 +5,11 @@
 * change
 - removal
 
-vur
+v0.5 2017-01-29
 + craftables
 + more treasurepools
 * mace knockback and swing timing
+* repaired big little mace whoops
 * baton rework
 * cane rework
 * club rework
