--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,10 +6,11 @@
 - removal
 
 vur
-+ weaponbag treasurepools for GDRWC fix
++ weaponbag treasurepools for GDRWC-fix
 + fu monsters treasurepool
 + weapons for fu npcs
 * tungsten club fix
+* spellbook fixes
 
 v0.5 2017-01-29
 + craftables
