--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,9 @@
 * change
 - removal
 
+vur
+* rare spellbook elements and alt abilities
+
 v0.5a 2017-02-10
 + weaponbag treasurepools for GDRWC-fix
 + fu monsters treasurepool
