--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,10 @@
 * change
 - removal
 
+vur
++ violium greatsword
++ aegisalt armcannon
+
 v0.5b 2017-02-25
 + rwc magic
 * rare spellbook elements and alt abilities
